--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -100,22 +100,27 @@
   </div>
 </header>
 
-<section class="main-content">
-  <div class="container">
+<section class="services-page">
+  <div class="services-item-cntrl">
+    <div class="serv-fea-img">
+      <img src="assets/images/Group 965.jpg" alt="">
+    </div>
+    <div class="container">
       <div class="row">
         <div class="col-md-6">
-
+          
         </div>
         <div class="col-md-6">
-
+          <div class="sic">
+            <h2 class="fl-h2">24hr Emergency mechanic response</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam gravida ipsum, vel auctor libero felis igula. </p>
+            <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
+          </div>
         </div>
       </div>
-  </div>    
+    </div>
+  </div>       
 </section>
-
-<ol>
-  <li class="facebook"><a href="#"></a></li>
-</ol>
 
 <footer class="footer-wrp">
   <div class="container">
