--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -71,17 +71,50 @@
 
 </head>
 <body>
-<header class="header">
-  <div class="container">
+<header class="header-wrap">
+  <div class="top-bar">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="top-bar-cntlr">
+            <div class="top-bar-left">
+              <p>A super quick piggyback from <strong>A</strong> to <strong>B</strong></p>
+            </div>
+            <div class="top-bar-rt">
+              <ul class="reset-list">
+                <li class="hdr-tel">
+                  <a href="tel:02920257">
+                    <span>02920 257</span>
+                    <svg class="hdr-tel-icon" width="16" height="16" viewBox="0 0 16 16" fill="#FF5C26">
+                      <use xlink:href="#hdr-tel-icon"></use></svg>
+                    <i></i>
+                  </a>
+                </li>
+                <li class="hdr-mail">
+                  <a href="mailto:info@superlifts.co.uk">
+                    <span>info@superlifts.co.uk</span>
+                    <i><svg class="hdr-mail-icon" width="16" height="16" viewBox="0 0 16 16" fill="#FF5C26">
+                      <use xlink:href="#hdr-mail-icon"></use></svg></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header">
+    <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="header-inr clearfix">
             <div class="hdr-lft">
               <div class="logo">
-                <a href="#"><img src="assets/images/logo.png"></a>
+                <a href="#"><img src="assets/images/logo.svg"></a>
               </div>
             </div>
-            <div class="hdr-rgt">
+            <div class="hdr-mdl">
               <nav class="main-nav">
                 <ul class="clearfix reset-list">
                   <li><a href="#"></a></li>
@@ -94,11 +127,16 @@
                 </ul>
               </nav>
             </div>
+            <div class="hdr-right">
+              
+            </div>
           </div>
         </div>
       </div>
+    </div>
   </div>
 </header>
+
 
 <section class="main-content">
   <div class="container">
@@ -113,9 +151,7 @@
   </div>    
 </section>
 
-<ol>
-  <li class="facebook"><a href="#"></a></li>
-</ol>
+
 
 <footer class="footer-wrp">
   <div class="container">
