--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -105,20 +105,19 @@
     <div class="serv-fea-img">
       <img src="assets/images/Group 965.jpg" alt="">
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          
-        </div>
-        <div class="col-md-6">
-          <div class="sic">
-            <h2 class="fl-h2">24hr Emergency mechanic response</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam gravida ipsum, vel auctor libero felis igula. </p>
-            <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
-          </div>
+    <div class="sic-cntrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sic">
+              <h2 class="fl-h2 sic-title">24hr Emergency mechanic response</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam gravida ipsum, vel auctor libero felis igula. </p>
+              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
+            </div>
+          </div>    
         </div>
       </div>
-    </div>
+    </div>  
   </div>       
 </section>
 
