--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -129,6 +129,9 @@
 
 <footer class="footer-wrp">
   <div class="ftr-top">
+    <div class="ftr-top-bg">
+      <img src="assets/images/ftr-bg-icon.png">
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
