--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -127,6 +127,38 @@
   <li class="facebook"><a href="#"></a></li>
 </ol>
 
+<section class="mpb-about-sec">
+  <div class="mbp-about-sec-bg">
+    <img src="assets/images/mpb-about-sec-bg.png">
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="mpb-about-sec-inr clearfix">
+          <div class="mpb-about-lft">
+            <div class="mpb-about-img">
+              <img src="assets/images/mpb-about-img-01.jpg">
+            </div>
+          </div>
+          <div class="mpb-about-rgt">
+            <div class="mbp-about-des">
+              <h2 class="mbp-about-des-title fl-h2">A little about us...</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a. Sed a ipsum nisl. Sed quam ex, vulputate vitae scelerisque quis, vulputate vel velit.</p>
+              <ul>
+                <li>We offer multiple services at great value</li>
+                <li>Use your phones location when you book</li>
+                <li>Biodegradable and eco-friendly products</li>
+                <li>Pay for your service electronically and securely</li>
+                <li>Trained and skilled mechanic team members</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <footer class="footer-wrp">
   <div class="ftr-top">
     <div class="ftr-top-bg">
