--- a/themes/mypiggyback/services2.html
+++ b/themes/mypiggyback/services2.html
@@ -49,34 +49,7 @@
 
 
     <!-- Start of Noyon -->
-    <symbol id="tell-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="15.2" viewBox="0 0 16 15.2">
-      <path id="Phone_Icon" data-name="Phone Icon" d="M1000.52,28.027,998.2,26.553a1.339,1.339,0,0,0-1.724.325l-.525.8a18.494,18.494,0,0,1-5.6-5.273l.875-.525a1.237,1.237,0,0,0,.525-.8,1.1,1.1,0,0,0-.2-.924l-1.525-2.2a1.307,1.307,0,0,0-1.674-.4l-2.224,1.2c-.125.075-.2.125-.325.2-1.674,1.8-.15,5.873,3.724,9.521,2.8,2.674,5.8,4.123,7.921,4.123a2.858,2.858,0,0,0,1.924-.6l.275-.275h0l1.275-2A1.18,1.18,0,0,0,1000.52,28.027Zm-2,2.974c-1.15.95-4.723-.25-8.122-3.448-3.348-3.2-4.6-6.6-3.6-7.672l2.074-1.2,1.474,2.124-.874.525a1.237,1.237,0,0,0-.525.8,1.1,1.1,0,0,0,.2.925,20.682,20.682,0,0,0,6.072,5.8,1.339,1.339,0,0,0,1.724-.325l.6-.874,2.274,1.4Z" transform="translate(-985.128 -17.4)"/>
-    </symbol>
-    <symbol id="mail-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12">
-      <path id="Email_icon" data-name="Email icon" d="M1142.776,19h-15.041a1.5,1.5,0,0,0-1.493,1.493v9.014A1.5,1.5,0,0,0,1127.735,31h15.013a1.5,1.5,0,0,0,1.493-1.493V20.493A1.461,1.461,0,0,0,1142.776,19Zm-1.8,1.493-5.408,3.3a.6.6,0,0,1-.535,0l-5.493-3.3Zm-13.238,9.014V21.169l6.45,3.916a1.743,1.743,0,0,0,1.042.309,1.686,1.686,0,0,0,1.042-.309l6.451-3.916v8.338Z" transform="translate(-1126.242 -19)"/>
-    </symbol>
 
-    <symbol id="card-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="63.441" viewBox="0 0 27 63.441">
-      <defs>
-        <clipPath id="clip-path">
-          <rect id="Rectangle_61" data-name="Rectangle 61" width="27" height="63.441" transform="translate(1263 47.958)"/>
-        </clipPath>
-      </defs>
-      <g id="Group_1043" data-name="Group 1043" transform="translate(-1263 -47.958)" clip-path="url(#clip-path)">
-        <g id="Cart_icon_crane_" data-name="Cart icon (crane)">
-          <path id="Path_1852" data-name="Path 1852" d="M1271.627,81.89a10.032,10.032,0,0,0,2.049.626l-2.682,4.836h2.166l2.582-4.656a11.327,11.327,0,0,0,2.592-.337l2.769,4.993h2.166l-3.643-6.57-.01-.018-3.445-6.211A1.049,1.049,0,0,1,1278,73.531l7.663,13.821h2.166l-4.356-7.857a11.366,11.366,0,0,0,3.47-8.183V69.044a3.67,3.67,0,1,0-7.339,0v2.268a4.042,4.042,0,0,1-.129,1.015,2.942,2.942,0,0,0-5.159,2.712,2.768,2.768,0,0,1,.088-4.96,8.564,8.564,0,0,0,4.844-7.739V58.452a.947.947,0,0,0-.947-.948h-5.444a.947.947,0,0,0-.947.948V62.34a1.187,1.187,0,0,1-.634,1.089,10.01,10.01,0,0,0-2.926,2.1.948.948,0,1,0,1.359,1.321,8.126,8.126,0,0,1,2.375-1.7,3.091,3.091,0,0,0,1.72-2.8V59.4h3.551V62.34a6.659,6.659,0,0,1-3.758,6.023,4.664,4.664,0,0,0,1.9,8.879l1.879,3.388a9.517,9.517,0,0,1-1.794.172,8.208,8.208,0,0,1-7.665-11.133.947.947,0,1,0-1.768-.677,10.1,10.1,0,0,0,3.814,11.991l-3.532,6.369h2.166Zm9.874-10.578V69.044a1.776,1.776,0,1,1,3.551,0v2.268a9.467,9.467,0,0,1-2.535,6.454l-1.874-3.382A5.871,5.871,0,0,0,1281.5,71.312Z"/>
-          <rect id="Rectangle_58" data-name="Rectangle 58" width="7.35" height="13.944" transform="translate(1271.904 45.221)"/>
-          <rect id="Rectangle_59" data-name="Rectangle 59" width="3.524" height="15.137" transform="translate(1273.817 45.179)"/>
-          <g id="Rectangle_60" data-name="Rectangle 60" transform="translate(1263 87.352)"  stroke="#514c4e" stroke-miterlimit="10" stroke-width="1.785">
-            <rect width="27" height="24.047" stroke="none"/>
-            <rect x="0.893" y="0.893" width="25.215" height="22.262"/>
-          </g>
-        </g>
-        <g id="Order_amount" data-name="Order amount">
-          <path id="Path_1853" data-name="Path 1853" d="M1278.478,104.383h-2.113v-5.8l.021-.952.034-1.041q-.527.528-.731.692l-1.149.925-1.018-1.274,3.219-2.569h1.737Z"/>
-        </g>
-      </g>
-    </symbol>
 
 
     <!-- Start of Milon -->
@@ -117,79 +90,35 @@
 
 
 
+
+
   </svg>
 
 
 </head>
 <body>
-<header class="header-wrap">
-  <div class="top-bar">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="top-bar-cntlr">
-            <div class="top-bar-left">
-              <p>A super quick piggyback from <strong>A</strong> to <strong>B</strong></p>
-            </div>
-            <div class="top-bar-rt">
-              <ul class="reset-list">
-                <li class="hdr-tel">
-                  <a href="tel:02920257">
-                    <span>02920 257</span>
-                    <i><svg class="tell-icon" width="16" height="15.2" viewBox="0 0 16 15.2" fill="#ffffff">
-                      <use xlink:href="#tell-icon"></use></svg></i>
-                  </a>
-                </li>
-                <li class="hdr-mail">
-                  <a href="mailto:info@superlifts.co.uk">
-                    <span>info@superlifts.co.uk</span>
-                    <i><svg class="mail-icon" width="18" height="12" viewBox="0 0 18 12" fill="#ffffff">
-                      <use xlink:href="#mail-icon"></use></svg></i>
-                  </a>
-                </li>
-              </ul>
+<header class="header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="header-inr clearfix">
+          <div class="hdr-lft">
+            <div class="logo">
+              <a href="#"><img src="assets/images/logo.png"></a>              
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="header-inr clearfix">
-            <div class="hdr-lft">
-              <div class="logo">
-                <a href="#"><img src="assets/images/logo.svg"></a>
-              </div>
-            </div>
-            <div class="hdr-right">
-              <div class="hdr-menu">
-                <nav class="main-nav">
-                  <ul class="clearfix reset-list">
-                    <li class="current-menu-item"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Vehicle Recovery</a>
-                      <ul class="sub-menu" style="">
-                        <li><a href="#">Sub Menu</a></li>
-                        <li><a href="#">Sub Menu</a></li>
-                        <li><a href="#">Sub Menu</a></li>
-                        <li><a href="#">Sub Menu</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">Vehicle Transport</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                  </ul>
-                </nav>
-              </div>
-              <div class="hdr-order-icon">
-                <span>1</span>
-                <i><img src="assets/images/card-icon.svg" alt=""></i>
-              </div>
-            </div>
+          <div class="hdr-rgt">
+            <nav class="main-nav">
+              <ul class="clearfix reset-list">
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
@@ -197,20 +126,100 @@
   </div>
 </header>
 
-
-<section class="main-content">
-  <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6">
-
+<section class="services-page">
+  <div class="service-items-cntrl">
+    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/emergency-mechanic-response-service.jpg');">
+      <div class="emrs">
+        <svg class="Icon-1" width="86" height="63" viewBox="0 0 86 63" fill="#0178d4"><use xlink:href="#Icon-1"></use></svg>
+      </div>
+    </div>
+    <div class="sic-cntrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sic mHc">
+              <h2 class="fl-h2 sic-title">24hr Emergency<br> mechanic response</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
+              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
+            </div>
+          </div>    
         </div>
       </div>
-  </div>    
+    </div>  
+  </div>
+
+  <!-- part-2 -->
+  <div class="services-item-cntrl lft-des-rgt-img">
+    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/battery-replacement.jpg');">
+      <div class="emrs">
+        <svg class="Icon-2" width="80" height="60" viewBox="0 0 86 63" fill="#0178d4"><use xlink:href="#Icon-2"></use></svg>
+      </div>
+    </div>
+    <div class="sic-cntrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sic mHc">
+              <h2 class="fl-h2 sic-title">Battery replacement</h2>
+              <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
+              <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
+              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
+            </div>
+          </div>    
+        </div>
+      </div>
+    </div>  
+  </div>
+  <!-- part-3 -->
+  <div class="services-item-cntrl">
+    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/mobile-tyre-replacement.jpg');">
+      <div class="emrs">
+        <svg class="Icon-3" width="73" height="68" viewBox="0 0 73 68" fill="#0178d4"><use xlink:href="#Icon-3"></use></svg>
+      </div>
+    </div>
+    <div class="sic-cntrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sic mHc">
+              <h2 class="fl-h2 sic-title">24hr Mobile tyre <br>replacement </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
+              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
+            </div>
+          </div>    
+        </div>
+      </div>
+    </div>  
+  </div>
+
+  <!-- part-4 -->
+  <div class="services-item-cntrl lft-des-rgt-img">
+    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/car-body-repair.jpg');">
+      <div class="emrs">
+        <svg class="Icon-4" width="71" height="75" viewBox="0 0 71 75" fill="#0178d4"><use xlink:href="#Icon-4"></use></svg>
+      </div>
+    </div>
+    <div class="sic-cntrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sic mHc">
+              <h2 class="fl-h2 sic-title">Car body repair</h2>
+              <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
+              <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
+              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
+            </div>
+          </div>    
+        </div>
+      </div>
+    </div>  
+  </div>         
 </section>
 
+<!-- part-2 -->
+<section class="services-page">
+       
+</section>
 
 
 <footer class="footer-wrp">
