--- a/themes/mypiggyback/services2.html
+++ b/themes/mypiggyback/services2.html
@@ -149,7 +149,7 @@
   </div>
 
   <!-- part-2 -->
-  <div class="services-item-cntrl lft-des-rgt-img">
+  <div class="service-items-cntrl lft-des-rgt-img">
     <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/battery-replacement.jpg');">
       <div class="emrs">
         <svg class="Icon-2" width="80" height="60" viewBox="0 0 86 63" fill="#0178d4"><use xlink:href="#Icon-2"></use></svg>
@@ -171,7 +171,7 @@
     </div>  
   </div>
   <!-- part-3 -->
-  <div class="services-item-cntrl">
+  <div class="service-items-cntrl">
     <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/mobile-tyre-replacement.jpg');">
       <div class="emrs">
         <svg class="Icon-3" width="73" height="68" viewBox="0 0 73 68" fill="#0178d4"><use xlink:href="#Icon-3"></use></svg>
@@ -193,7 +193,7 @@
   </div>
 
   <!-- part-4 -->
-  <div class="services-item-cntrl lft-des-rgt-img">
+  <div class="service-items-cntrl lft-des-rgt-img">
     <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/car-body-repair.jpg');">
       <div class="emrs">
         <svg class="Icon-4" width="71" height="75" viewBox="0 0 71 75" fill="#0178d4"><use xlink:href="#Icon-4"></use></svg>
