--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -294,6 +294,7 @@
             <i><img src="assets/images/title-location-icon.svg" alt=""></i>
           </h2>
           <div class="piggyback-slider piggybackSlider">
+
             <div class="piggyback-slide-item-cntlr">
               <div class="piggyback-slide-item">
                 <div class="piggyback-item piggyback-active-item">
@@ -309,6 +310,48 @@
                   </div>
                   <div class="piggyback-item-hding">
                     <h3 class="piggyback-item-title fl-h3">1. book</h3>
+                    <span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="piggyback-slide-item-cntlr">
+              <div class="piggyback-slide-item">
+                <div class="piggyback-item">
+                  <div class="piggyback-item-bdr">
+                    <div class="piggyback-item-img-cntlr">
+                      <img src="assets/images/piggyback-item-img-001.jpg" alt="">
+                      <!-- <div class="piggyback-item-img inline-bg" style="background-image: url('assets/images/piggyback-item-img-002.jpg');"></div> -->
+                    </div>
+                    <div class="piggyback-item-desc">
+                      <p>Use your phones location to book<br> 
+                      a service for your broken vehicle</p>
+                    </div>
+                  </div>
+                  <div class="piggyback-item-hding">
+                    <h3 class="piggyback-item-title fl-h3">1. wait</h3>
+                    <span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="piggyback-slide-item-cntlr">
+              <div class="piggyback-slide-item">
+                <div class="piggyback-item">
+                  <div class="piggyback-item-bdr">
+                    <div class="piggyback-item-img-cntlr">
+                      <img src="assets/images/piggyback-item-img-003.jpg" alt="">
+                      <!-- <div class="piggyback-item-img inline-bg" style="background-image: url('assets/images/piggyback-item-img-002.jpg');"></div> -->
+                    </div>
+                    <div class="piggyback-item-desc">
+                      <p>Use your phones location to book<br> 
+                      a service for your broken vehicle</p>
+                    </div>
+                  </div>
+                  <div class="piggyback-item-hding">
+                    <h3 class="piggyback-item-title fl-h3">3. celebrate!</h3>
                     <span></span>
                   </div>
                 </div>
