--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -97,28 +97,76 @@
 
 </head>
 <body>
-<header class="header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="header-inr clearfix">
-          <div class="hdr-lft">
-            <div class="logo">
-              <a href="#"><img src="assets/images/logo.png"></a>              
+<header class="header-wrap">
+  <div class="top-bar">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="top-bar-cntlr">
+            <div class="top-bar-left">
+              <p>A super quick piggyback from <strong>A</strong> to <strong>B</strong></p>
+            </div>
+            <div class="top-bar-rt">
+              <ul class="reset-list">
+                <li class="hdr-tel">
+                  <a href="tel:02920257">
+                    <span>02920 257</span>
+                    <i><svg class="tell-icon" width="16" height="15.2" viewBox="0 0 16 15.2" fill="#ffffff">
+                      <use xlink:href="#tell-icon"></use></svg></i>
+                  </a>
+                </li>
+                <li class="hdr-mail">
+                  <a href="mailto:info@superlifts.co.uk">
+                    <span>info@superlifts.co.uk</span>
+                    <i><svg class="mail-icon" width="18" height="12" viewBox="0 0 18 12" fill="#ffffff">
+                      <use xlink:href="#mail-icon"></use></svg></i>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
-          <div class="hdr-rgt">
-            <nav class="main-nav">
-              <ul class="clearfix reset-list">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-              </ul>
-            </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header-inr clearfix">
+            <div class="hdr-lft">
+              <div class="logo">
+                <a href="#"><img src="assets/images/logo.svg"></a>
+              </div>
+            </div>
+            <div class="hdr-right">
+              <div class="hdr-menu">
+                <nav class="main-nav">
+                  <ul class="clearfix reset-list">
+                    <li class="current-menu-item"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li class="menu-item-has-children">
+                      <a href="#">Vehicle Recovery</a>
+                      <ul class="sub-menu" style="">
+                        <li><a href="#">Sub Menu</a></li>
+                        <li><a href="#">Sub Menu</a></li>
+                        <li><a href="#">Sub Menu</a></li>
+                        <li><a href="#">Sub Menu</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Vehicle Transport</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="hdr-order-icon">
+                <a href="#">
+                  <span>1</span>
+                  <i><img src="assets/images/card-icon.svg" alt=""></i>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
