--- a/themes/mypiggyback/services2.html
+++ b/themes/mypiggyback/services2.html
@@ -200,8 +200,10 @@
 </header>
 
 <section class="services-page">
+  <!-- part-1 -->
   <div class="service-items-cntrl">
-    <div class="srv-fea-img inline-bg mHc" style="background-image: url('assets/images/emergency-mechanic-response-service.jpg');">
+    <div class="srv-fea-img inline-bg mHc">
+      <img src="assets/images/emergency-mechanic-response-service.jpg" alt="">
       <div class="emrs">
         <svg class="Icon-1" width="86" height="63" viewBox="0 0 86 63" fill="#0178d4"><use xlink:href="#Icon-1"></use></svg>
       </div>
@@ -213,7 +215,7 @@
             
           </div>
           <div class="col-md-6">
-            <div class="siccc mHc">
+            <div class="sicc mHc">
               <h2 class="fl-h2 sicc-title">24hr Emergency<br> mechanic response</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
               <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
@@ -226,7 +228,8 @@
 
   <!-- part-2 -->
   <div class="service-items-cntrl">
-    <div class="srv-fea-img inline-bg mHc" style="background-image: url('assets/images/battery-replacement.jpg');">
+    <div class="srv-fea-img inline-bg mHc">
+      <img src="assets/images/battery-replacement.jpg" alt="">
       <div class="emrs">
         <svg class="Icon-2" width="80" height="60" viewBox="0 0 86 60" fill="#0178d4"><use xlink:href="#Icon-2"></use></svg>
       </div>
@@ -251,7 +254,8 @@
   </div>
   <!-- part-3 -->
   <div class="service-items-cntrl">
-    <div class="srv-fea-img inline-bg mHc" style="background-image: url('assets/images/mobile-tyre-replacement.jpg');">
+    <div class="srv-fea-img inline-bg mHc">
+      <img src="assets/images/mobile-tyre-replacement.jpg" alt="">
       <div class="emrs">
         <svg class="Icon-3" width="73" height="68" viewBox="0 0 73 68" fill="#0178d4"><use xlink:href="#Icon-3"></use></svg>
       </div>
@@ -276,7 +280,8 @@
 
   <!-- part-4 -->
   <div class="service-items-cntrl ">
-    <div class="srv-fea-img inline-bg mHc" style="background-image: url('assets/images/car-body-repair.jpg');">
+    <div class="srv-fea-img inline-bg mHc">
+      <img src="assets/images/car-body-repair.jpg" alt="">
       <div class="emrs">
         <svg class="Icon-4" width="71" height="75" viewBox="0 0 71 75" fill="#0178d4"><use xlink:href="#Icon-4"></use></svg>
       </div>
