--- a/themes/mypiggyback/services2.html
+++ b/themes/mypiggyback/services2.html
@@ -201,7 +201,7 @@
 
 <section class="services-page">
   <!-- part-1 -->
-  <div class="service-items-cntrl">
+  <div class="service-items-cntrl clearfix">
     <div class="srv-fea-img inline-bg mHc">
       <img src="assets/images/emergency-mechanic-response-service.jpg" alt="">
       <div class="emrs">
@@ -227,7 +227,7 @@
   </div>
 
   <!-- part-2 -->
-  <div class="service-items-cntrl">
+  <div class="service-items-cntrl clearfix">
     <div class="srv-fea-img inline-bg mHc">
       <img src="assets/images/battery-replacement.jpg" alt="">
       <div class="emrs">
