--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -45,6 +45,11 @@
 
     <!-- Start of Ranojit -->
 
+    <symbol id="destination-switcher-button-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="18.526" viewBox="0 0 8 18.526">
+      <g id="Destination_Switcher_button" data-name="Destination Switcher button" transform="translate(-197.769 -207.214)">
+        <path id="Btn" d="M205.512,222.371l-3.127,3.114a.875.875,0,0,1-1.233,0l-3.126-3.114a.868.868,0,0,1,.617-1.482h1.673v-8.825h-1.673a.868.868,0,0,1-.617-1.482l3.126-3.114a.875.875,0,0,1,1.233,0l3.127,3.114a.868.868,0,0,1-.617,1.482h-1.673v8.825H204.9A.868.868,0,0,1,205.512,222.371Z"/>
+      </g>
+    </symbol>
 
 
 
@@ -291,7 +296,67 @@
       <div class="row">
         <div class="col-md-12">
           <div class="home-page-bnr-con-inr">
-            
+            <div class="loc-searching-form-cntlr">
+              <div style="position: relative;">
+                <form>
+                  <div class="input-field-row starting-field">
+                    <span>A</span>
+                    <input type="text" name="" placeholder="Choose your starting point">
+                  </div>
+                  <div class="input-field-row ending-field">
+                    <span>B</span>
+                    <input type="text" name="" placeholder="Choose your ending point">
+                  </div>
+                  <span class="destination-switcher-button">
+                    <i>
+                      <svg class="destination-switcher-button-icon" width="8" height="18.526" viewBox="0 0 8 18.526" fill="#ccc">
+                        <use xlink:href="#destination-switcher-button-icon"></use></svg>
+                      </i>
+                  </span>
+                </form>
+                <div class="loc-distance-miles">
+                  <div>
+                    <strong>15.6</strong>
+                    <span>miles</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="bnr-booking-form-cntlr">
+              <div class="fl-tabs clearfix">
+                <button class="tab-link current" data-tab="tab-1"><span>LOREM IPSUM DOLOR</span></button>
+                <button class="tab-link" data-tab="tab-2"><span>MAECENAS SAGITTIS TURPIS</span></button>
+              </div>
+              <div id="tab-1" class="fl-tab-content current">
+                <div class="vehicle-recovery-form vehicle-form">
+                  <form>
+                    <div class="input-field-row">
+                      <input type="text" name="" placeholder="From location A (Postcode)">
+                    </div>
+                    <div class="input-field-row">
+                      <input type="text" name="" placeholder="To location B (Postcode)">
+                    </div>
+                    <div class="input-field-row">
+                      <input type="text" name="" placeholder="Full Name">
+                    </div>
+                    <div class="input-field-row">
+                      <input type="text" name="" placeholder="Email Address">
+                    </div>
+                    <div class="input-field-row">
+                      <input type="text" name="" placeholder="Telephone Number">
+                    </div>
+                    <div class="input-field-row input-field-row-submit">
+                      <input type="submit" name="" value="SUPER-FASTBOOKING">
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div id="tab-2" class="fl-tab-content">
+               
+              </div>
+            </div>
+
+
           </div>
         </div>
       </div>
