about page done

--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -173,7 +173,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate lobortis mollis fusce justo fringilla.</p>
               <div class="ftr-logo">
                 <a href="#"><img src="assets/images/ftr-logo.png"></a>
-                <span>A super quick lift from A to B</span>
+                <span>A <strong>super quick</strong> lift from A to B</span>
               </div>
             </div>
             <div class="ftr-menu ftr-col-1">
